[gd_scene load_steps=7 format=3 uid="uid://0yhpqub76vxy"]

[ext_resource type="Script" uid="uid://ii7n24pvvav8" path="res://Scripts/Levels/victory.gd" id="1_jkqok"]
[ext_resource type="Texture2D" uid="uid://jm4thupt2ix" path="res://Sprites/Assets/Level/WinScreen.png" id="2_1py7d"]
[ext_resource type="Theme" uid="uid://dbd2l8fwxe8if" path="res://UI/Victorybutton.tres" id="3_uyfsj"]
[ext_resource type="AudioStream" uid="uid://bowua2u7twi6k" path="res://Audio/AntsGoMarching_ForTheColony.wav" id="4_jxbob"]
[ext_resource type="AudioStream" uid="uid://bc70y6wig47y4" path="res://Audio/coin.wav" id="5_mgdla"]

[sub_resource type="Theme" id="Theme_4hpus"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkqok")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1py7d")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = 82.0
offset_right = -237.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4hpus")
alignment = 1

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_uyfsj")
text = "Main Menu"
icon_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_uyfsj")
text = "Quit"
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AudioStreamPlayer"]
stream = ExtResource("4_jxbob")
volume_db = -5.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="AudioStreamPlayer"]
stream = ExtResource("5_mgdla")
volume_db = -5.0
pitch_scale = 0.5

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
